improved layout for users

--- a/webclient/app/views/users/edit.html.erb
+++ b/webclient/app/views/users/edit.html.erb
@@ -1,4 +1,4 @@
-<h1>Editing user</h1>
+<h1>Edit User</h1>
 
 <% if @user.error_id != 0 %>
 <p>
@@ -12,44 +12,49 @@
 <% form_for(@user) do |f| %>
   <%= f.error_messages %>
 
-  <p>
-    <%= f.label :fullName %><br />
-    <%= f.text_field :fullName %>
-  </p>
-  <p>
-    <%= f.label :groups %><br />
-    <%= f.text_field :groups %>
-  </p>
-  <p>
-    <%= f.label :defaultGroup %><br />
-    <%= f.text_field :defaultGroup %>
-  </p>
-  <p>
-    <%= f.label :homeDirectory %><br />
-    <%= f.text_field :homeDirectory %>
-  </p>
-  <p>
-    <%= f.label :loginShell %><br />
-    <%= f.text_field :loginShell %>
-  </p>
-  <p>
-    <%= f.label :loginName %><br />
-    <%= f.text_field :loginName %>
-  </p>
-  <p>
-    <%= f.label :uid %><br />
-    <%= f.text_field :uid %>
-  </p>
-  <p>
-    <%= f.label :password %><br />
-    <%= f.text_field :password %>
-  </p>
-  <p>
-    <%= f.submit "Update" %>
-  </p>
-<% end %>
-<% end %>
+  <div class="table">
+    <img src="/images/bg-th-left.gif" width="8" height="7" alt="" class="left" />
+    <img src="/images/bg-th-right.gif" width="7" height="7" alt="" class="right" />
+    <table class="listing form" cellpadding="0" cellspacing="0">
+    <tr>
+ 	<th class="full" colspan="2">User</th>
+    </tr>
+    <tr>
+	<td class="first" width="120"><strong>Full Name</strong></td>
+	<td class="last"><%= f.text_field :fullName %></td>
+    </tr>
+    <tr class="bg">
+	<td class="first"><strong>Groups</strong></td>
+	<td class="last"><%= f.text_field :groups %></td>
+    </tr>
+    <tr>
+	<td class="first"><strong>Default Group</strong></td>
+	<td class="last"><%= f.text_field :defaultGroup %></td>
+    </tr>
+    <tr class="bg">
+	<td class="first"><strong>Home Directory</strong></td>
+	<td class="last"><%= f.text_field :homeDirectory %></td>
+    </tr>
+    <tr>
+	<td class="first"><strong>Login Shell </strong></td>
+	<td class="last"><%= f.text_field :loginShell %></td>
+    </tr>
+    <tr class="bg">
+	<td class="first"><strong>Login Name </strong></td>
+	<td class="last"><%= f.text_field :loginName %></td>
+    </tr>
+    <tr>
+	<td class="first"><strong>UID</strong></td>
+	<td class="last"><%= f.text_field :uid %></td>
+    </tr>
+    <tr class="bg">
+	<td class="first"><strong>Password</strong></td>
+	<td class="last"><%= f.text_field :password %></td>
+    </tr>
+    </table>
+    <p><%= f.submit "Update" %><%= link_to 'Back', users_path, :class => "button" %></p>
+  </div>
 
 
-<%= link_to 'Show', user_path(@user.loginName) %> |
-<%= link_to 'Back', users_path %>
+<% end %>
+<% end %>
