--- a/webclient/app/views/webservices/edit.html.erb
+++ b/webclient/app/views/webservices/edit.html.erb
@@ -4,8 +4,8 @@
   <%= f.error_messages %>
 
   <div class="table">
-    <img src="images/bg-th-left.gif" width="8" height="7" alt="" class="left" />
-    <img src="images/bg-th-right.gif" width="7" height="7" alt="" class="right" />
+    <img src="/images/bg-th-left.gif" width="8" height="7" alt="" class="left" />
+    <img src="/images/bg-th-right.gif" width="7" height="7" alt="" class="right" />
     <table class="listing form" cellpadding="0" cellspacing="0">
     <tr>
  	<th class="full" colspan="2">YaST-Web-Service</th>
@@ -19,7 +19,7 @@
 	<td class="last"><%= f.text_field :desc %></td>
     </tr>
     </table>
-  <p><%= f.submit "Update" %><%= link_to 'Back', webservices_path, :class => "button" %></p>
+    <p><%= f.submit "Update" %><%= link_to 'Back', webservices_path, :class => "button" %></p>
   </div>
 <% end %>
 
