--- a/webclient/app/views/webservices/new.html.erb
+++ b/webclient/app/views/webservices/new.html.erb
@@ -1,11 +1,11 @@
-<h1>Create new YaST-Web-Service</h1>
+<h1>New YaST-Web-Service</h1>
 
 <% form_for(@webservice) do |f| %>
   <%= f.error_messages %>
 
   <div class="table">
-    <img src="images/bg-th-left.gif" width="8" height="7" alt="" class="left" />
-    <img src="images/bg-th-right.gif" width="7" height="7" alt="" class="right" />
+    <img src="/images/bg-th-left.gif" width="8" height="7" alt="" class="left" />
+    <img src="/images/bg-th-right.gif" width="7" height="7" alt="" class="right" />
     <table class="listing form" cellpadding="0" cellspacing="0">
     <tr>
  	<th class="full" colspan="2">YaST-Web-Service</th>
