--- a/webclient/app/views/services/index.rhtml
+++ b/webclient/app/views/services/index.rhtml
@@ -1,16 +1,73 @@
-
-<div class="title">Services Configuration</div>
-
-<hr/>
-
-<table style="border: solid; border-width: 1px;">
-<% 
-@services.each do | s |
-%>
-<tr><td><%= link_to s.link, :action => s.link %></td></tr>
-<% end %>
-</table>
+<h1>Services</h1>
 <br>
-<%= link_to 'Back', :controller => 'main' %>
 
+<% for tableCounter in 0..@table.size-1 do %>
+   <div class="table">
+      <img src="/images/bg-th-left.gif" width="8" height="7" alt="" class="left" />
+      <img src="/images/bg-th-right.gif" width="7" height="7" alt="" class="right" />
+      <table class="listing" cellpadding="0" cellspacing="0">
+         <tr>
+           <% for columnCounter in 0..5 do %>
+              <% if @services.size > tableCounter*6+columnCounter %>
+                 <% if columnCounter == 0 %>
+    	            <th class="first" width=17%><%=h @services[tableCounter*6+columnCounter].link %></th>
+                 <% elsif columnCounter == 5 %>
+    	            <th class="last" width=17%><%=h @services[tableCounter*6+columnCounter].link %></th>
+                 <% else %>
+    	            <th width=17%><%=h @services[tableCounter*6+columnCounter].link %></th>
+                 <% end %>
+              <% else %>
+                 <% if columnCounter == 5 %>
+    	            <th class="last" width=17%></th>
+                 <% else %>
+    	            <th width=17%></th>
+                 <% end %>
+              <% end %>
+           <% end %>
+         </tr>
+         <% for lineCounter in 0..@table[tableCounter]-1 do %>         
+            <tr>
+               <% for columnCounter in 0..5 do %>
+                  <% if @services.size > tableCounter*6+columnCounter %>
+                     <% commandList = @services[tableCounter*6+columnCounter].commandList %>
+                     <% if lineCounter < commandList.size %>
+                        <td><strong><%= link_to "#{commandList[lineCounter]}",  :id=> commandList[lineCounter],
+                                                :action =>"execute", :service_id=> @services[tableCounter*6+columnCounter].link %>
+                        </td>
+                     <% else %> 
+                        <td> </td>
+                     <% end %> 
+                  <% else %>
+                     <% if columnCounter == 5 %>
+    	                <td class="last" width=17%></td>
+                     <% else %>
+      	                <td width=17%></td>
+                     <% end %>
+                  <% end %> 
+               <% end %> 
+            </tr>
+         <% end %>
+      </table>
+   </div>
+<% end %>
+
+<% if @lastResultString != "" || @lastResult != 0 %>
+   <div class="table">
+      <img src="images/bg-th-left.gif" width="8" height="7" alt="" class="left" />
+      <img src="images/bg-th-right.gif" width="7" height="7" alt="" class="right" />
+      <table class="listing form" cellpadding="0" cellspacing="0">
+      <tr>
+          <th class="full" colspan="2">Service Call Result</th>
+      </tr>
+      <tr>
+          <td class="first" width="120"><strong>Result</strong></td>
+          <td class="last"><%= @lastResult==0 ? "success" : "failed" %></td>
+      </tr>
+      <tr class="bg">
+          <td class="first"><strong>Description</strong></td>
+          <td class="last"><%= @lastResultString %></td>
+      </tr>
+      </table>
+   </div>
+<% end %>
 
