--- a/webclient/app/views/services/index.rhtml
+++ b/webclient/app/views/services/index.rhtml
@@ -7,17 +7,17 @@
       <img src="/images/bg-th-right.gif" width="7" height="7" alt="" class="right" />
       <table class="listing" cellpadding="0" cellspacing="0">
          <tr>
-           <% for columnCounter in 0..5 do %>
-              <% if @services.size > tableCounter*6+columnCounter %>
+           <% for columnCounter in 0..3 do %>
+              <% if @services.size > tableCounter*4+columnCounter %>
                  <% if columnCounter == 0 %>
-    	            <th class="first" width=17%><%=h @services[tableCounter*6+columnCounter].link %></th>
-                 <% elsif columnCounter == 5 %>
-    	            <th class="last" width=17%><%=h @services[tableCounter*6+columnCounter].link %></th>
+    	            <th class="first" width=17%><%=h @services[tableCounter*4+columnCounter].link %></th>
+                 <% elsif columnCounter == 3 %>
+    	            <th class="last" width=17%><%=h @services[tableCounter*4+columnCounter].link %></th>
                  <% else %>
-    	            <th width=17%><%=h @services[tableCounter*6+columnCounter].link %></th>
+    	            <th width=17%><%=h @services[tableCounter*4+columnCounter].link %></th>
                  <% end %>
               <% else %>
-                 <% if columnCounter == 5 %>
+                 <% if columnCounter == 3 %>
     	            <th class="last" width=17%></th>
                  <% else %>
     	            <th width=17%></th>
@@ -27,18 +27,31 @@
          </tr>
          <% for lineCounter in 0..@table[tableCounter]-1 do %>         
             <tr>
-               <% for columnCounter in 0..5 do %>
-                  <% if @services.size > tableCounter*6+columnCounter %>
-                     <% commandList = @services[tableCounter*6+columnCounter].commandList %>
+               <% for columnCounter in 0..3 do %>
+                  <% if @services.size > tableCounter*4+columnCounter %>
+                     <% commandList = @services[tableCounter*4+columnCounter].commandList %>
                      <% if lineCounter < commandList.size %>
-                        <td><strong><%= link_to "#{commandList[lineCounter]}",  :id=> commandList[lineCounter],
-                                                :action =>"execute", :service_id=> @services[tableCounter*6+columnCounter].link %>
+                        <td>
+                            <% if commandList[lineCounter][:name] == "configure" %>
+                               <%= link_to image_tag("#{commandList[lineCounter][:icon]}", :alt =>  "icon"), 
+                                                     :id=>"config",
+                                                     :action =>@services[tableCounter*4+columnCounter].link %>
+                               <strong><%= link_to "#{commandList[lineCounter][:name]}",  :id=>"config",
+                                                     :action =>@services[tableCounter*4+columnCounter].link %>
+                            <% else %>
+                               <%= link_to image_tag("#{commandList[lineCounter][:icon]}", :alt =>  "icon"), 
+                                                     :id=> commandList[lineCounter][:name],
+                                                     :action =>"execute", :service_id=> @services[tableCounter*4+columnCounter].link %>
+                               <strong><%= link_to "#{commandList[lineCounter][:name]}",  :id=> commandList[lineCounter][:name],
+                                                     :action =>"execute", :service_id=> @services[tableCounter*4+columnCounter].link %>
+
+                            <% end %> 
                         </td>
                      <% else %> 
                         <td> </td>
                      <% end %> 
                   <% else %>
-                     <% if columnCounter == 5 %>
+                     <% if columnCounter == 3 %>
     	                <td class="last" width=17%></td>
                      <% else %>
       	                <td width=17%></td>
