--- a/webclient/app/views/config_ntp/show.html.erb
+++ b/webclient/app/views/config_ntp/show.html.erb
@@ -1,6 +1,6 @@
+<h1>NTP Server</h1>
 <br>
-<h3>NTP Server Configuration</h3>
-<br>
+
 <% if @ntp.error_id != 0 %>
 <p>
    Error: <%= @ntp.error_string -%>
@@ -8,18 +8,32 @@
 <% end %>
 
 <% if @ntp.error_id == 0 or @ntp.error_id != 1 %>
+
  <% form_tag 'config' do %>
-  <input type="checkbox" name="enabled" value="true" <%= @is_enabled %>>Enabled
-  <br><br>
-  <input type="checkbox" name="use_random_server" value="true" <%= @is_use_random_server %>>Use random server
-  <br><br>
-  Manual Servers:  <%= text_field_tag "manual_server", @ntp.manual_server  %>
-  <br>
-  <br><br>
-  <%= submit_tag "Save" %>
+
+  <div class="table">
+    <img src="/images/bg-th-left.gif" width="8" height="7" alt="" class="left" />
+    <img src="/images/bg-th-right.gif" width="7" height="7" alt="" class="right" />
+    <table class="listing form" cellpadding="0" cellspacing="0">
+       <tr>
+ 	  <th class="full" colspan="2">Settings</th>
+       </tr>
+       <tr>
+	  <td class="first" width="120"><strong>Enabled</strong></td>
+  	  <td class="last"><input type="checkbox" name="enabled" value="true" <%= @is_enabled %>></td>
+       </tr>
+       <tr class="bg">
+	  <td class="first"><strong>Use random server</strong></td>
+	  <td class="last"><input type="checkbox" name="use_random_server" value="true" <%= @is_use_random_server %>></td>
+       </tr>
+       <tr>
+	  <td class="first"><strong>Manual Servers</strong></td>
+	  <td class="last"><%= text_field_tag "manual_server", @ntp.manual_server %></td>
+       </tr>
+    </table>
+    <p><%= submit_tag "Save" -%><%= link_to 'Back', {:controller => 'services'}, :class => "button" %></p>
+  </div>
  <% end %>
-<br>
-<%= link_to 'Back', :controller => 'services' %>
 <% end %>
 
 
