--- a/webclient/app/views/users/exportssh.html.erb
+++ b/webclient/app/views/users/exportssh.html.erb
@@ -29,10 +29,10 @@
     </tr>
     <tr>
 	<td class="first"><strong>SHH Key</strong></td>
-	<td class="last"><%= f.text_field :sshkey %></td>
+	<td class="last"><%= f.text_field :sshkey, :disabled=>@writePermission %></td>
     </tr>
     </table>
-    <p><%= f.submit "Export SSH-Key" %><%= link_to 'Back', users_path, :class => "button" %></p>
+    <p><%= f.submit "Export SSH-Key", :disabled=>@writePermission %><%= link_to 'Back', users_path, :class => "button" %></p>
   </div>
 <% end %>
 <% end %>
