added icons for login

--- a/webclient/public/stylesheets/admin.css
+++ b/webclient/public/stylesheets/admin.css
@@ -317,6 +317,7 @@ div.table .select select {
 	margin:2px 3px 0 0;
 	text-align:right;	
 	}
+
 	
 /* right column header */
 #right-column .h {
@@ -348,6 +349,18 @@ div.table .select select {
 	border:1px solid #B8B8B8;
 	background:#EBEBEB;
 	margin:0 0 15px 0;
+	}
+
+/* center column box */
+#center-column .box {
+	font-family:arial,sans-serif;
+	color:#333;
+	font-size:12px;
+        font-weight: bold;
+	width:630px;
+	padding:5px;
+	border:0px solid #B8B8B8;
+	margin:5px 0 15px 0;
 	}
 	
 /* right column buttons */
