--- a/webclient/app/views/layouts/main.rhtml
+++ b/webclient/app/views/layouts/main.rhtml
@@ -4,6 +4,10 @@
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
   <%= stylesheet_link_tag 'admin' %>
 
+   <%= javascript_include_tag :defaults %>
+   <%= javascript_include_tag "yui/yahoo", "yui/dom", "yui/event", "yui/connection", "yui/dragdrop", "yui/container" %>
+   <%= stylesheet_link_tag  'yui/container'%>
+
 <title>YaST</title>
 
 </head>
