better layout for login

--- a/webclient/app/views/layouts/main.rhtml
+++ b/webclient/app/views/layouts/main.rhtml
@@ -77,6 +77,7 @@
        <ul class="nav">
         <li><a href="mailto:schubi@suse.de">Stefan Schubert</a></li>
 	<li><a href="mailto:kkaempf@suse.de">Klaus K&auml;mpf</a></li>
+	<li><a href="mailto:dmacvicar@suse.de">D. Mac-Vicar Prett</a></li>
 	<li class="last"><a href="mailto:yast-devel@opensuse.org">Others</a></li>
        </ul>
       </div>
@@ -85,6 +86,8 @@
        <ul class="nav">
         <li><a href="http://en.opensuse.org/YaST">About YaST</a></li>
         <li><a href="http://www.rubyonrails.org">About Rails</a></li>
+        <li><a href="http://www.webresourcesdepot.com/free-admin-template-for-web-applications">About used CSS</a></li>
+        <li><a href="http://www.famfamfam.com/">About used icons</a></li>
         <li class="last"><a href="http://www.freedesktop.org">About PolicyKit</a></li>
        </ul>
       </div>
