added popup for services;

--- a/webclient/app/views/layouts/main.rhtml
+++ b/webclient/app/views/layouts/main.rhtml
@@ -91,6 +91,36 @@
         <li class="last"><a href="http://www.freedesktop.org">About PolicyKit</a></li>
        </ul>
       </div>
+      <br/>
+      <br/>
+      <br/>
+      <br/>
+      <br/>
+      <br/>
+      <br/>
+      <br/>
+      <br/>
+      <br/>
+      <br/>
+      <br/>
+      <br/>
+      <br/>
+      <br/>
+      <br/>
+      <br/>
+      <br/>
+      <br/>
+      <br/>
+      <br/>
+      <br/>
+      <br/>
+      <br/>
+      <br/>
+      <br/>
+      <br/>
+      <div id="progress" style="display:none;">
+	<%= image_tag("/images/working.gif") %>...Wait...
+      </div>
     </div>
   </div>
 </div>
